--- a/recursos/vistas/vistaBienvenida.fxml
+++ b/recursos/vistas/vistaBienvenida.fxml
@@ -7,18 +7,18 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" maxHeight="480.0" maxWidth="800.0" minHeight="480.0" minWidth="800.0" prefHeight="480.0" prefWidth="800.0" stylesheets="@/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" stylesheets="@/style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <StackPane prefHeight="536.0" prefWidth="833.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);">
+      <StackPane prefHeight="600.0" prefWidth="833.0" style="-fx-background-color: rgba(0, 0, 0, 0.5);">
          <children>
-            <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true">
                <image>
-                  <Image url="@../../compilados/kobe-ouano-vampire-castle-watermarked.gif" />
+                  <Image url="@../kobe-ouano-vampire-castle-watermarked.gif" />
                </image>
             </ImageView>
-            <VBox alignment="TOP_CENTER" prefHeight="379.0" prefWidth="640.0">
+            <VBox alignment="TOP_CENTER" prefHeight="600.0" prefWidth="800.0">
                <children>
-                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="144.0" prefWidth="566.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LABYRINTHUS" textFill="#ffcc00">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="188.0" prefWidth="566.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LABYRINTHUS" textFill="#ffcc00">
                      <font>
                         <Font name="Power Green" size="96.0" />
                      </font>
@@ -28,7 +28,7 @@
                         <Font name="Power Green" size="52.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" prefHeight="47.0" prefWidth="133.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="CRÉDITOS:" textFill="#ffcc00">
+                  <Label alignment="CENTER" prefHeight="57.0" prefWidth="133.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="CRÉDITOS:" textFill="#ffcc00">
                      <font>
                         <Font name="Power Green" size="34.0" />
                      </font>
@@ -43,17 +43,17 @@
                         <Font name="Power Green" size="20.0" />
                      </font>
                   </Label>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="70.0" prefWidth="133.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LICENCIA:" textFill="#ffcc00">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="79.0" prefWidth="133.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="LICENCIA:" textFill="#ffcc00">
                      <font>
                         <Font name="Power Green" size="34.0" />
                      </font>
                   </Label>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="30.0" prefWidth="51.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="GPL v3" textFill="#ffcc00">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="47.0" prefWidth="51.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="GPL v3" textFill="#ffcc00">
                      <font>
                         <Font name="Power Clear" size="20.0" />
                      </font>
                   </Label>
-                  <Label alignment="BOTTOM_CENTER" prefHeight="42.0" prefWidth="346.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="(PULSA CUALQUIER TECLA PARA COMENZAR)" textFill="#ffcc00">
+                  <Label alignment="BOTTOM_CENTER" prefHeight="69.0" prefWidth="346.0" style="-fx-font-weight: bold; -fx-effect: dropshadow(gaussian,black,5,0.5,4,4);" text="(PULSA CUALQUIER TECLA PARA COMENZAR)" textFill="#ffcc00">
                      <font>
                         <Font name="Power Clear" size="19.0" />
                      </font>
