--- a/recursos/vistas/vistaIntroduccion.fxml
+++ b/recursos/vistas/vistaIntroduccion.fxml
@@ -1,20 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.effect.ColorAdjust?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="TOP_CENTER" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #323232;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <StackPane maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0">
+      <StackPane prefHeight="600.0" prefWidth="800.0">
          <children>
-            <ImageView fitHeight="600.0" fitWidth="1142.0" opacity="0.53" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="600.0" fitWidth="800.0" pickOnBounds="true">
                <image>
                   <Image url="@../castillo.png" />
                </image>
+               <effect>
+                  <ColorAdjust contrast="-0.17" />
+               </effect>
             </ImageView>
             <VBox alignment="CENTER" maxHeight="600.0" maxWidth="800.0" minHeight="600.0" minWidth="800.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: rgba(0, 0, 0, 0.05);">
                <children>
@@ -132,6 +138,13 @@
                      <image>
                         <Image url="@../jugador.gif" />
                      </image>
+                     <effect>
+                        <DropShadow height="147.03" radius="67.155" spread="0.34" width="123.59">
+                           <color>
+                              <Color red="0.9473684430122375" green="0.9473684430122375" blue="0.7719298005104065" />
+                           </color>
+                        </DropShadow>
+                     </effect>
                   </ImageView>
                   <Label alignment="CENTER" prefHeight="73.0" prefWidth="346.0" text="(Pulsa cualquier tecla para comenzar la huida...)" textFill="#ffcc00">
                      <font>
