--- a/recursos/vistas/vistaLoginNombre.fxml
+++ b/recursos/vistas/vistaLoginNombre.fxml
@@ -5,44 +5,63 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<HBox fx:id="tFieldUsuario" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0" prefWidth="400.0" style="-fx-background-color: #323232;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<VBox alignment="CENTER" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <VBox alignment="CENTER" maxHeight="150.0" maxWidth="402.0" minHeight="148.0" minWidth="300.0" prefHeight="148.0" prefWidth="402.0" style="-fx-spacing: 15px;">
+      <StackPane prefHeight="617.0" prefWidth="800.0">
          <children>
-            <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="356.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,2,2);" text="LABYRINTHUS: LA ÚLTIMA PRUEBA" textFill="#ffcc00">
-               <font>
-                  <Font name="Power Green" size="28.0" />
-               </font>
-            </Label>
-            <Label prefHeight="26.0" prefWidth="215.0" text="Introduce el nombre de jugador:" textFill="WHITE">
-               <font>
-                  <Font name="Power Green" size="17.0" />
-               </font>
-            </Label>
-            <TextField fx:id="campoNombre" maxHeight="27.0" maxWidth="210.0" minHeight="27.0" minWidth="180.0" opacity="0.82" prefHeight="27.0" prefWidth="210.0" promptText="Nombre..." style="-fx-border-color: black; -fx-effect: dropshadow(gaussian,rgba(0,0,0,0.5),4,0.5,0,1);">
-               <cursor>
-                  <Cursor fx:constant="TEXT" />
-               </cursor>
-               <font>
-                  <Font name="Power Green" size="12.0" />
-               </font>
-            </TextField>
-            <Button fx:id="botonNombre" mnemonicParsing="false" prefHeight="24.0" prefWidth="90.0" text="ACEPTAR">
-               <cursor>
-                  <Cursor fx:constant="HAND" />
-               </cursor>
+            <ImageView fitHeight="600.0" fitWidth="800.0" opacity="0.78" pickOnBounds="true">
+               <image>
+                  <Image url="@../../compilados/login.jpg" />
+               </image>
+            </ImageView>
+            <VBox alignment="CENTER" maxHeight="208.0" maxWidth="402.0" minHeight="148.0" minWidth="300.0" prefHeight="206.0" prefWidth="334.0" style="-fx-spacing: 15px; -fx-background-color: rgba(0, 0, 0, 0.65);">
+               <children>
+                  <Label alignment="TOP_CENTER" prefHeight="30.0" prefWidth="356.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,2,2);" text="LABYRINTHUS: LA ÚLTIMA PRUEBA" textFill="#ffcc00">
+                     <font>
+                        <Font name="Power Green" size="28.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="26.0" prefWidth="215.0" text="Introduce el nombre de jugador:" textFill="WHITE">
+                     <font>
+                        <Font name="Power Green" size="17.0" />
+                     </font>
+                  </Label>
+                  <TextField fx:id="campoNombre" maxHeight="27.0" maxWidth="210.0" minHeight="27.0" minWidth="180.0" opacity="0.82" prefHeight="27.0" prefWidth="210.0" promptText="Nombre..." style="-fx-border-color: black; -fx-effect: dropshadow(gaussian,rgba(0,0,0,0.5),4,0.5,0,1);">
+                     <cursor>
+                        <Cursor fx:constant="TEXT" />
+                     </cursor>
+                     <font>
+                        <Font name="Power Green" size="12.0" />
+                     </font>
+                  </TextField>
+                  <Button fx:id="botonNombre" mnemonicParsing="false" prefHeight="24.0" prefWidth="90.0" style="-fx-background-radius: 15px;" styleClass="boton-hover" text="ACEPTAR">
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                     <font>
+                        <Font name="Power Green" size="17.0" />
+                     </font>
+                  </Button>
+               </children>
                <effect>
-                  <DropShadow />
+                  <DropShadow height="35.66" radius="17.33" width="35.66">
+                     <color>
+                        <Color red="0.43529412150382996" green="0.43529412150382996" blue="0.3960784375667572" opacity="0.20000000298023224" />
+                     </color>
+                  </DropShadow>
                </effect>
-               <font>
-                  <Font name="Power Green" size="17.0" />
-               </font>
-            </Button>
+            </VBox>
          </children>
-      </VBox>
+      </StackPane>
    </children>
-</HBox>
+</VBox>
