--- a/recursos/vistas/vistaTopJugadores.fxml
+++ b/recursos/vistas/vistaTopJugadores.fxml
@@ -25,7 +25,7 @@
                            <children>
                               <ImageView fitHeight="100.0" fitWidth="92.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../antorcha.gif" />
+                                    <Image url="@../../compilados/antorcha.gif" />
                                  </image>
                               </ImageView>
                            </children>
@@ -39,12 +39,7 @@
                               <Font name="Power Green" size="44.0" />
                            </font>
                         </Label>
-                        <Label fx:id="labelGanar" alignment="TOP_CENTER" prefHeight="59.0" prefWidth="469.0" text="¡ENHORABUENA! ¡HAS CONSEGUIDO ENTRAR EN EL PUESTO Nº3!" textFill="#ffcc00">
-                           <font>
-                              <Font name="Power Green" size="21.0" />
-                           </font>
-                        </Label>
-                        <StackPane prefHeight="316.0" prefWidth="540.0">
+                        <StackPane prefHeight="384.0" prefWidth="567.0">
                            <children>
                               <VBox alignment="CENTER" prefHeight="403.0" prefWidth="503.0" style="-fx-border-color: #ffcc00;">
                                  <children>
@@ -261,11 +256,7 @@
                               </VBox>
                            </children>
                         </StackPane>
-                        <Label fx:id="labelPerder" prefHeight="60.0" prefWidth="399.0" text="¡VAYA! ¡TAL VEZ LA PRÓXIMA VEZ LO CONSIGAS!" textFill="#ffcc00">
-                           <font>
-                              <Font name="Power Green" size="23.0" />
-                           </font>
-                        </Label>
+                        <Label prefHeight="57.0" prefWidth="40.0" />
                         <Label prefHeight="38.0" prefWidth="283.0" style="-fx-effect: dropshadow(gaussian,black,5,0.5,2,2);" text="(Pulsa cualquier tecla para volver al Menú...)" textFill="#ffcc00">
                            <font>
                               <Font name="Power Green" size="16.0" />
@@ -279,7 +270,7 @@
                            <children>
                               <ImageView fitHeight="92.0" fitWidth="145.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../antorcha.gif" />
+                                    <Image url="@../../compilados/antorcha.gif" />
                                  </image>
                               </ImageView>
                            </children>
